# retroverse

./: .gitignore  .gitmodules  LICENSE  README.md  log.txt  logic.txt  todo.txt
components/bigboy/: todo.txt
components/computie-vme/: todo.txt
controllers/bigboy/firmware/: Cargo.toml  Embed.toml
controllers/bigboy/firmware/.cargo/: config.toml
controllers/bigboy/firmware/src/: main.rs  main_analyzer.rs  main_busanalyzer.rs  main_peripheral.rs
controllers/computie-vme/: todo.txt
hardware/IVB-BP8/: IVB-BP8.kicad_prl  IVB-BP8.kicad_pro  Socket.kicad_sch  Termination.kicad_sch  fp-lib-table  sym-lib-table
hardware/IVB-BUS8/: IVB-BUS8.kicad_prl
hardware/IVC-STH7/: Bus.kicad_sch  Controller.kicad_sch  IO.kicad_sch  IVC-STH7.csv  IVC-STH7.kicad_pcb  IVC-STH7.kicad_prl  IVC-STH7.kicad_pro  IVC-STH7.kicad_sch  IVC-STH7.net  IVC-STH7.xml  Transceivers.kicad_sch  fp-lib-table  freerouting.dsn
hardware/IVC-k30/: Bus.kicad_sch  CPU.kicad_sch  IO.kicad_sch  IVC-k30.kicad_prl  IVC-k30.kicad_pro  IVC-k30.kicad_sch  Logic.kicad_sch  Memory.kicad_sch  Transceivers.kicad_sch  fp-lib-table  sym-lib-table
peripherals/membird/: todo.txt
vmebusboards/6-Slot-Backplane/: 6-Slot-Backplane.kicad_pcb  6-Slot-Backplane.kicad_prl  6-Slot-Backplane.kicad_pro  6-Slot-Backplane.kicad_sch  Slot1.kicad_sch  Slot2.kicad_sch  Slot3.kicad_sch  Slot4.kicad_sch  Slot5.kicad_sch  Slot6.kicad_sch  TerminationLeft.kicad_sch  TerminationRight.kicad_sch  sym-lib-table  sym-lib-table.old
vmebusboards/60mm-Extender/: 60mm-Extender.kicad_pcb  60mm-Extender.kicad_prl  60mm-Extender.kicad_pro  (+2 more)
(+171 files in other folders)
