[package]
name = "ivy-bigboy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
cortex-m-rtic = "1.1"
panic-rtt-target = { version = "0.1.0", features = ["cortex-m"] }
rtt-target = "0.4.0"
stm32h7xx-hal = { version = "0.15", features = [ "stm32h743", "rt", "ethernet" ] }
#stm32h7xx-hal = { version = "0.15", features = [ "stm32h747cm7", "rt", "ethernet", "usb_hs" ] }
smoltcp = { version = "0.10.0", default-features = false, features = ["medium-ethernet", "proto-ipv4", "socket-raw"] }
usb-device = "0.3"
usbd-serial = "0.2.0"

[profile.dev]
opt-level = "z"

